--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     access-key-id: LTAI5t5tapKX44eaAkq42YZV
     access-key-secret: Q9uEeuUp6ankTr4FwEgOFYQtkNC081
     bucket-name: reggie-itcast
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 5
