--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -17,5 +17,12 @@ sky:
     password: 123456
     database: 5
   wechat:
-    appid: wxaf3408c495625f13
-    secret: 6af2ea8ea51e848133e49b5baca8799c
+    appid: wxffb3637a228223b8
+    secret: 84311df9199ecacdf4f12d27b6b9522d
+    mchid : 1561414331
+    mchSerialNo: 4B3B3DC35414AD50B1B755BAF8DE9CC7CF407606
+    privateKeyFilePath: D:\\pay\\apiclient_key.pem
+    apiV3Key: CZBK51236435wxpay435434323FFDuv3
+    weChatPayCertFilePath: D:\\pay\\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
+    notifyUrl: https://44b171fb.cpolar.io/notify/paySuccess
+    refundNotifyUrl: https://44b171fb.cpolar.io/notify/refundSuccess
